# DataStructureAlgorithms

./: .gitignore  CMakeLists.txt
dep/include/SDL_TTF/: SDL_ttf.h
dep/lib/SDL/: SDL2.lib  SDL2main.lib
dep/lib/SDL_TTF/: SDL2_ttf.lib
include/: Prerequisities.h  Tree.h
include/Tree/: BST.h  Tree.h
src/: Main.cpp  Tree.cpp
src/BSTSort/: Main.cpp
src/SimpleBSTTest/: Main.cpp
src/SimpleTreeTest/: Main.cpp
src/Tree/: BST.cpp  Tree.cpp
