#----------------------------------------------------------------------------
#----------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.0)

project("DataStructureAlgorithms" CXX)

#----------------------------------------------------------------------------
#----------------------------------------------------------------------------

#----------------------------------------------------------------------------
set (EXECUTABLE_OUTPUT_PATH $(PROJECT_BINARY_DIR)/bin)
#----------------------------------------------------------------------------

#----------------------------------------------------------------------------
include_directories("include" "dep/include")
link_directories("dep/lib/SDL")
link_directories("dep/lib/SDL_TTF")
#----------------------------------------------------------------------------

#----------------------------------------------------------------------------
if(MSVC)
	add_definitions(/W4)
endif ()
#----------------------------------------------------------------------------

#----------------------------------------------------------------------------
set(TREE_HEADERS
	"include/Tree.h"
	"include/Prerequisities.h"
)

set(TREE_SOURCES
	"src/Tree.cpp"
	"src/Main.cpp"
)

add_executable("Tree"
	${TREE_HEADERS}
	${TREE_SOURCES}
)

target_link_libraries("Tree" "SDL2")
target_link_libraries("Tree" "SDL2main")
target_link_libraries("Tree" "SDL2_ttf")

#----------------------------------------------------------------------------

